--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
 }
 .formDiv{
     background-color: rgb(249, 249, 249);
-    max-height: 40vh;
+    min-height: fit-content;
     width: calc(100%-25px);
     box-shadow: 3px 3px 3px 1px gainsboro;
     border-radius: 5px;
@@ -82,7 +82,10 @@ form{
 }
 form>div>div {
     position: relative;
-    margin-bottom: 3rem;
+
+}
+form>div>div:not(.last){
+    margin-bottom: 2.5rem;
 }
 .formDiv label{
     position: absolute;
@@ -115,11 +118,23 @@ input:focus-visible{
 
 input + span{
     visibility: hidden;
+    color: palevioletred;
+    opacity: 0.8;
 }
 input.error + span {
     visibility: visible;
 }
 a{
     text-decoration: none;
-    color: aquamarine;
+    color: rgb(86, 201, 96);
+}
+button{
+    background:  rgb(86, 201, 96);
+    padding: 10px 20px;
+    border: 3px solid rgb(92, 92, 92);
+    border-radius: 8px;
+    font-family: 'Gloria Hallelujah', cursive;
+    margin-bottom: 15px;
+    font-size: 1.2rem;
+    color: rgb(92, 92, 92);
 }
